         libspectrum.h.in (Stuart).
20150316 doc/libspectrum.txt: add missing line break (Stuart).
20150316 snapshot.c: store PC-1 for all snapshot formats whilst in the halted
         state (Stuart).
20150318 crypto.c,csw.c,internals.h,libspectrum.c,pzx_read.c,rzx.c,szx.c,
         tzx_read.c: const and static cleanups (Stuart).
20150418 internals.h: fix compilation on systems without stdint.h (Stuart).
20150506 libspectrum.h.in: add missing compatibility comments (Stuart).
20150507 libspectrum.{c,h.in}: add Didaktik disk class and image format (part of
         patch #331) (Gergely Szasz).
20150510 Makefile.am,m4/pkg.m4: add pkg.m4 for PKG_CHECK_MODULES in case the
         platform doesn't have pkg-config installed (Sergio).
20150512 pzx_read.c,szx.c,tzx_write.c: avoid mixing declarations and code for
         C89 compilers (Adrien Destugues)
20150513 internals.h: fix ARRAY_SIZE when using a modern GCC with strict C89
         syntax (Sergio).
20150606 doc/libspectrum.txt: sync with snap_accessors.txt (Stuart).
20150613 m4/ax_create_stdint_h.m4: add AX_CREATE_STDINT_H macro from the GNU
         Autoconf Archive (Stuart).
20150617 Makefile.am,test/Makefile.am: enable silent rules for perl and windres
         commands (Sergio).
20150831 test/turbo-zeropilot.tzx: add mime-type property (Sergio).
20160325 tape_block.c: allow for the possibility that inital_level has the
         default value (Fred).
20160329 timings.c: refactor frame timings (Stuart).
20160410 Makefile.am: revert revision 4731 / bug #262 as it makes configuring
         target flags for cross-compilation difficult (patch #357) (BogDan
         Vatra).
20160424 ChangeLog,README,configure.ac,doc/libspectrum.{3,txt},
         hacking/ChangeLog: merge libspectrum_1_1_0-branch changes onto trunk
         (Fred).
20160427 tape_block.c: fix bugs handling TZX generalised data blocks with empty
         symbol tables (e.g. ZX81 tapes encoded as in the TZX 1.20
         specification) (Andre Leiradella).