@@ -1,5 +1,5 @@
 /* bzip2.c: routines for bzip2 decompression of data
-   Copyright (c) 2003-2005 Philip Kendall
+   Copyright (c) 2003-2015 Philip Kendall
 
    $Id$
 
