@@ -1,5 +1,5 @@
 /* creator.c: simple type for storing creator information
-   Copyright (c) 2003-2005 Philip Kendall
+   Copyright (c) 2003-2015 Philip Kendall
 
    $Id$
 
