@@ -1,5 +1,5 @@
 /* libspectrum.h: the library for dealing with ZX Spectrum emulator files
-   Copyright (c) 2001-2007 Philip Kendall, Darren Salt, Fredrick Meunier
+   Copyright (c) 2001-2015 Philip Kendall, Darren Salt, Fredrick Meunier
 
    $Id$
 
