@@ -1,5 +1,5 @@
 /* rzx.c: routines for dealing with .rzx files
-   Copyright (c) 2002-2014 Philip Kendall
+   Copyright (c) 2002-2015 Philip Kendall
 
    $Id$
 
